# Computational-Linguistics

./: .gitignore  LICENSE  README.md  pyproject.toml
lab1/: inference_test.ipynb  llm.ipynb  lstm.ipynb  prepare_dataset.py  rnn.ipynb  transformer.ipynb
lab1/architectures/: gpt.py  lstm.py
lab1/utils/: prepare_dataset.py  streaming_dataset.py
lab2/: download.py  pretrained.ipynb  training.ipynb
lab2/tokenizer/: __init__.py  tokenizer.py
lab2/utils/: build_wp_tokenizer.py  create_test_corpus.py  download_dataset.py  train_sentencepiece.py
lab3/: dataset.py  download.py  finetune.ipynb  slm.ipynb
lab4/: training.ipynb
lab4/utils/: download_dataset.py  gpt.py
