[project]
name = "computational-linguistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "speakleash>=0.3.51",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
